--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -7,17 +7,18 @@ pipeline {
     }
 
     stages {
-        stage('Build') {
-            steps {
-                sh 'mvn clean install -DskipTests'
-            }
-        }
-        stage('Test-Stage') {
-            steps {
-                sh 'mvn test'
-            }
+    stage('Build') {
+        steps {
+           sh 'mvn -f backend/pom.xml clean install -DskipTests'
         }
     }
+    stage('Test-Stage') {
+        steps {
+            sh 'mvn -f backend/pom.xml test'
+        }
+    }
+}
+    
 
     post {
         always {
